@@ -18,18 +18,19 @@
 # along with GLIMMER; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-import sys,getopt,PyCF,PyGMT,Numeric,Scientific.IO.NetCDF,datetime
+import sys,getopt,PyCF,PyGMT,Numeric,datetime,os
 
 def usage():
     "print short help message"
 
     print 'Usage: create_topo.py [OPTIONS] infile outfile'
-    print 'create CF topography from long/lat ncdf file.'
+    print 'create CF topography from a GMT grid file'
     print ''
     print '  -h, --help\n\tthis message'
     print '  -Jspec\n\tGMT like projection specification'
-    print '\t  -Jblon0/lat0/lat1/lat2\n\t    Albers Equal-Area Conic. Give projection  center and  two  standard  parallels.'
-    print '\t  -Jllon0/lat0/lat1/lat2\n\t    Lambert Conic Conformal. Give projection  center and  two  standard  parallels.'
+    print '\t  -Jalon0/lat0\n\t    Lambert Azimuthal Equal Area. Give projection center/'
+    print '\t  -Jblon0/lat0/lat1/lat2\n\t    Albers Equal-Area Conic. Give projection center and  two  standard  parallels.'
+    print '\t  -Jllon0/lat0/lat1/lat2\n\t    Lambert Conic Conformal. Give projection center and  two  standard  parallels.'
     print '  -o, --origin lon/lat\n\tLongitude and latitude of origin of the projected coordinate system.'
     print '  -d, --delta dx[/dy]\n\tNode spacing. Assume dx==dy if dy is omitted.'
     print '  -n, --num x/y\n\tGrid size.'
@@ -67,27 +68,19 @@ def parse_GMTproj(projstring):
         proj.longitude_of_central_meridian = [float(ps[0])]
         proj.latitude_of_projection_origin = [float(ps[1])]
         proj.standard_parallel = [float(ps[2]),float(ps[3])]
+    elif projstring[0] in ['a','A']:
+        if len(ps) != 2:
+            print 'Error, wrong number of projection arguments'
+            usage()
+            sys.exit(1)
+        proj.grid_mapping_name='lambert_azimuthal_equal_area'
+        proj.longitude_of_central_meridian = [float(ps[0])]
+        proj.latitude_of_projection_origin = [float(ps[1])]
     else:
         print 'Error, no idea about projection: ',projstring
         usage()
         sys.exit(1)
     return proj
-
-def read_global_topo(filename):
-    ncfile = Scientific.IO.NetCDF.NetCDFFile(filename,'r')
-        
-    for var in ['topography','latitude','longitude']:
-        if var not in ncfile.variables.keys():
-            raise LookupError, '%s not in file %s'%(var,filename)
-
-    topo = PyGMT.Grid()
-    topo.y_minmax=[ncfile.variables['latitude'][0],ncfile.variables['latitude'][-1]]
-    topo.x_minmax=[ncfile.variables['longitude'][0],ncfile.variables['longitude'][-1]]
-    topo.data = Numeric.transpose(ncfile.variables['topography'][:,:])
-
-    ncfile.close()
-
-    return topo
         
 if __name__ == '__main__':
 
@@ -168,73 +161,63 @@ if __name__ == '__main__':
     proj.false_easting = proj4.params['x_0']
     proj.false_westing = proj4.params['y_0']
     
-    # loading topography
-    globtopo = read_global_topo(inname)
-
     # projecting topography
     proj_gmt='-J%s/1:1 -R%s -A -D%f/%f'%(
         proj4.getGMTprojection(),
         proj4.getGMTregion([0.,0.],[delta[0]*num[0],delta[1]*num[1]]),
         delta[0],delta[1])
-    projtopo = globtopo.project(proj_gmt)
+
+    PyGMT.command('grdproject','%s -G.__temp=1 %s'%(inname,proj_gmt))
+
+    projfile = open('.__temp')
+    projtopo = PyGMT.read_grid(projfile)
+    projfile.close()
+    os.remove('.__temp')
 
     (numx,numy) = projtopo.data.shape    
 
     # creating output netCDF file
-    ncfile = Scientific.IO.NetCDF.NetCDFFile(outname,'w')
+    cffile = PyCF.CFcreatefile(outname)
     # global attributes
-    ncfile.Conventions = "CF-1.0"
     if title is not None:
-        ncfile.title = title
+        cffile.title = title
     if institution is not None:
-        ncfile.institution = institution
+        cffile.institution = institution
     if source  is not None:
-        ncfile.source = source
+        cffile.source = source
     args = ''
     for a in sys.argv:
         args = args + '%s '%a
-    ncfile.history = '%s: %s'%(datetime.datetime.today(),args)
+    cffile.history = '%s: %s'%(datetime.datetime.today(),args)
     if references  is not None:
-        ncfile.references=references
+        cffile.references=references
     if comment is not None:
-        ncfile.comment = comment
+        cffile.comment = comment
 
     # creating dimensions
-    ncfile.createDimension('x1',numx)
-    ncfile.createDimension('y1',numy)
-    ncfile.createDimension('time',None)
+    cffile.createDimension('x1',numx)
+    cffile.createDimension('y1',numy)
+    cffile.createDimension('time',None)
     #creating variables
-    varx=ncfile.createVariable('x1',Numeric.Float32,('x1',))
-    varx.units = "meter"
-    varx.long_name = "Cartisian x-coordinate"
+    varx=cffile.createVariable('x1')
     varx[:] = (delta[0]*Numeric.arange(numx)).astype(Numeric.Float32)
 
-    vary=ncfile.createVariable('y1',Numeric.Float32,('y1',))
-    vary.units = "meter"
-    vary.long_name = "Cartisian y-coordinate"
+    vary=cffile.createVariable('y1')
     vary[:] = (delta[1]*Numeric.arange(numy)).astype(Numeric.Float32)
 
-    vartime=ncfile.createVariable('time',Numeric.Int,('time',))
-    vartime.long_name = "Model Time"
-    vartime.units = "year"
+    vartime=cffile.createVariable('time')
     vartime[0] = 0
 
-    varmap=ncfile.createVariable('mapping','c',())
+    varmap=cffile.file.createVariable('mapping','c',())
     PyCF.copyCFMap(proj,varmap)
 
-    varlat=ncfile.createVariable('lat',Numeric.Float32,('time', 'y1', 'x1'))
-    varlat.units = "degreeN"
-    varlat.long_name = "Latitude"
+    varlat=cffile.createVariable('lat')
     varlat.grid_mapping = 'mapping'
 
-    varlong=ncfile.createVariable('lon',Numeric.Float32,('time', 'y1', 'x1'))
-    varlong.units = "degreeE"
-    varlong.long_name = "Longitude"
+    varlong=cffile.createVariable('lon')
     varlong.grid_mapping = 'mapping'
 
-    vartopg=ncfile.createVariable('topg',Numeric.Float32,('time', 'y1', 'x1'))
-    vartopg.long_name = "bedrock topography"
-    vartopg.units = "meter"
+    vartopg=cffile.createVariable('topg')
     vartopg.grid_mapping = 'mapping'
 
     # get long/lat
@@ -257,4 +240,4 @@ if __name__ == '__main__':
 
     vartopg[0,:,:] =  Numeric.transpose(projtopo.data[:,:]).astype(Numeric.Float32)
 
-    ncfile.close()
+    cffile.close()
